<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">PokeDex</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pokemon_type">Pokemon Type</string>

    <string name="content_home_title">All the Pokémon data you\'ll ever need in one place!</string>
    <string name="content_home_subtitle">Thousands of data compiled into one place</string>
    <string name="content_home_button_label">Check PokèDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokedex_list_title">PokèDex</string>
    <string name="load_more">Load More ...</string>
    <string name="weight_label">Weight :</string>
    <string name="height_label">Height :</string>
    <string name="abilities_label">Abilities :</string>
    <string name="more_detail_label">More Detail</string>
    <string name="type_label">Type :</string>
    <string name="other_images_label">Other Images :</string>
    <string name="stats_label">Stats :</string>
</resources>
